# CS252-Lab

./: README.md
backend/: .gitignore  example.env  main.py  pyproject.toml
backend/app/: app.py
backend/app/api/: api.py
backend/app/api/routers/: ai_router.py  place_router.py
backend/app/schemas/: __init__.py  ai_schema.py  place_schema.py
backend/app/util/: __init__.py  load_env.py
frontend/: example.env  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: ChatBot.tsx  Login.tsx  Map.tsx  Route.tsx  custom-marker.tsx
frontend/src/pages/: LoginPage.tsx  MapPage.tsx  VerifyEmail.tsx
frontend/src/services/: firebaseService.ts  googleTranslateService.ts  mapService.ts  openWeatherService.ts
